--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="card"><a href="https://aski361.github.io/PicassoPainting.io/" target="_blank">PicassoPainting</a>
             <a href="https://github.com/aski361/PicassoPainting.io" target="_blank"><i class="fab fa-github"></i></a>
         </div>
-        <div class="card"><a href="https://aski361.github.io/Piano.io/o/" target="_blank">Piano</a>
+        <div class="card"><a href="https://aski361.github.io/Piano.io" target="_blank">Piano</a>
             <a href="https://github.com/aski361/Piano.io" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         <div class="card"><a href="https://aski361.github.io/TechnicalDocumentationPage.io/" target="_blank">TechnicalDocumentationPage</a>
